[gd_scene load_steps=75 format=3 uid="uid://nohq28uk7lfk"]

[ext_resource type="Script" uid="uid://cfu4ciwll8jcj" path="res://Scripts/Cururu/Cururu.gd" id="1_gwpdq"]
[ext_resource type="Texture2D" uid="uid://djy1g5ftd682w" path="res://Sprites/Cururu/Hit/03.png" id="2_0hf88"]
[ext_resource type="Texture2D" uid="uid://cwvw1pwco17gj" path="res://Sprites/Cururu/Hit/04.png" id="3_7uoqt"]
[ext_resource type="Texture2D" uid="uid://c0gcdq37vc5jo" path="res://Sprites/Cururu/Hit/05.png" id="4_61o3p"]
[ext_resource type="Texture2D" uid="uid://o5dfjhogimb" path="res://Sprites/Cururu/Hit/06.png" id="5_0r6tj"]
[ext_resource type="Texture2D" uid="uid://l08p16oovcgi" path="res://Sprites/Cururu/Hit/07.png" id="6_wao3i"]
[ext_resource type="Texture2D" uid="uid://cvqcka7at8bvd" path="res://Sprites/Cururu/Hit/08.png" id="7_bo6dy"]
[ext_resource type="Texture2D" uid="uid://d02lqeocw78bt" path="res://Sprites/Cururu/Hit/09.png" id="8_g8tdn"]
[ext_resource type="Texture2D" uid="uid://cnj5thpgkvv23" path="res://Sprites/Cururu/Pulo/4.png" id="9_7uoqt"]
[ext_resource type="Texture2D" uid="uid://4g67xd644aev" path="res://Sprites/Cururu/Run/2.png" id="9_61o3p"]
[ext_resource type="Texture2D" uid="uid://kep15tg16exx" path="res://Sprites/Cururu/Idle/V2/cururu_parado.png" id="10_6q3px"]
[ext_resource type="Texture2D" uid="uid://ckhr6xysd1748" path="res://Sprites/Cururu/Pulo/1.png" id="11_0hf88"]
[ext_resource type="Texture2D" uid="uid://ji67xj25sh17" path="res://Sprites/Cururu/Idle/V2/cururu_parado2.png" id="11_d2bxm"]
[ext_resource type="Texture2D" uid="uid://bcmpceltuv7om" path="res://Sprites/Cururu/Pulo/2.png" id="12_7uoqt"]
[ext_resource type="Texture2D" uid="uid://374vii38ugep" path="res://Sprites/Cururu/Pulo/3.png" id="13_61o3p"]
[ext_resource type="Texture2D" uid="uid://6waqj22kj7vk" path="res://Sprites/Cururu/Pulo/5.png" id="14_0r6tj"]
[ext_resource type="Texture2D" uid="uid://cwihk6wsxfi67" path="res://Sprites/Cururu/Pulo/6.png" id="15_wao3i"]
[ext_resource type="Texture2D" uid="uid://btrq28uf3nshw" path="res://Sprites/Cururu/Magia/01.png" id="17_d45jk"]
[ext_resource type="Texture2D" uid="uid://bnmshxa17gou7" path="res://Sprites/Cururu/Magia/02.png" id="18_vdd7f"]
[ext_resource type="Texture2D" uid="uid://b13t8yqr8jutj" path="res://Sprites/Cururu/Magia/03.png" id="19_x4yiv"]
[ext_resource type="Texture2D" uid="uid://bk50ktfh8vvds" path="res://Sprites/Cururu/Magia/04.png" id="20_6iqbf"]
[ext_resource type="Texture2D" uid="uid://bdstuu5v57h56" path="res://Sprites/Cururu/Magia/05.png" id="21_x3lr7"]
[ext_resource type="Texture2D" uid="uid://bw4y8414tr7wg" path="res://Sprites/Cururu/Magia/06.png" id="22_wpp42"]
[ext_resource type="Texture2D" uid="uid://rbeyv4lpxncr" path="res://Sprites/Cururu/Magia/07.png" id="23_kmqi2"]
[ext_resource type="Texture2D" uid="uid://b63h14rbag2ci" path="res://Sprites/Cururu/Magia/08.png" id="24_2q4c8"]
[ext_resource type="Texture2D" uid="uid://dnyyp5db2hpj7" path="res://Sprites/Cururu/Magia/09.png" id="25_wq158"]
[ext_resource type="Texture2D" uid="uid://bx0odhtfbvdc" path="res://Sprites/Cururu/Magia/10.png" id="26_1mxu7"]
[ext_resource type="Texture2D" uid="uid://b2o1rf20xil55" path="res://Sprites/Cururu/Run/Run 2.0 Concept/01.png" id="43_wq158"]
[ext_resource type="Texture2D" uid="uid://e7577gd0xg5m" path="res://Sprites/Cururu/Run/Run 2.0 Concept/02.png" id="44_1mxu7"]
[ext_resource type="Texture2D" uid="uid://b84y1f76marxr" path="res://Sprites/Cururu/Run/Run 2.0 Concept/03.png" id="45_lwl7b"]
[ext_resource type="Script" uid="uid://hsdutxxttrp3" path="res://Scripts/Componentes/Vida.gd" id="45_vkjtj"]
[ext_resource type="Texture2D" uid="uid://cngu376ludh0k" path="res://Sprites/Cururu/Run/Run 2.0 Concept/04.png" id="46_e0rx1"]
[ext_resource type="PackedScene" uid="uid://va5pjd6vuuo2" path="res://Objetos/Funcionalidade/CompHurtBox.tscn" id="46_wjcvp"]
[ext_resource type="Texture2D" uid="uid://d30vsj1axw66u" path="res://Sprites/Cururu/Run/Run 2.0 Concept/05.png" id="47_ga1ek"]
[ext_resource type="PackedScene" uid="uid://pc4mgv2nv8af" path="res://Objetos/Funcionalidade/CompHitBox.tscn" id="47_grb16"]
[ext_resource type="AudioStream" uid="uid://dhgsnus0fna7q" path="res://Audio/SFX/SOM TESTE.mp3" id="48_c8qv2"]
[ext_resource type="Texture2D" uid="uid://6msfhufqk2rr" path="res://Sprites/Cururu/Run/Run 2.0 Concept/06.png" id="48_jpq87"]
[ext_resource type="Script" uid="uid://cerjc6sna0dxs" path="res://Scripts/StateMachine/StateMachine.gd" id="49_1ribx"]
[ext_resource type="Texture2D" uid="uid://cymggy0nhcg23" path="res://Sprites/Cururu/Run/Run 2.0 Concept/07.png" id="49_eyqrd"]
[ext_resource type="Script" uid="uid://dmpgwk6x2wyq6" path="res://Scripts/Cururu/Chao.gd" id="50_3s0sn"]
[ext_resource type="Texture2D" uid="uid://cbbtl0c3t8rg1" path="res://Sprites/Cururu/Run/Run 2.0 Concept/08.png" id="50_tms4o"]
[ext_resource type="Texture2D" uid="uid://cfpejknr65sef" path="res://Sprites/Cururu/Run/Run 2.0 Concept/09.png" id="51_1dbdn"]
[ext_resource type="Script" uid="uid://dqm1rg2yvcp87" path="res://Scripts/Cururu/Fall.gd" id="51_dvy3r"]
[ext_resource type="Texture2D" uid="uid://c2aitw5ocfdeq" path="res://Sprites/Cururu/Run/Run 2.0 Concept/10.png" id="52_32f06"]
[ext_resource type="Script" uid="uid://c1tkv8brk85ke" path="res://Scripts/Cururu/Pulo.gd" id="52_damx7"]
[ext_resource type="Texture2D" uid="uid://da56a8ouefnh0" path="res://Sprites/Cururu/Melee/01.png" id="52_tms4o"]
[ext_resource type="Texture2D" uid="uid://b13yxab66ve2s" path="res://Sprites/Cururu/Melee/02.png" id="53_1dbdn"]
[ext_resource type="Script" uid="uid://ctu2e3ln1kydq" path="res://Scripts/Cururu/Dash.gd" id="53_k0fov"]
[ext_resource type="Texture2D" uid="uid://xalr154lfpix" path="res://Sprites/Cururu/Melee/03.png" id="54_0w8y8"]
[ext_resource type="Script" uid="uid://brymvmxc6n166" path="res://Scripts/Cururu/Dano.gd" id="54_jgcph"]
[ext_resource type="Script" uid="uid://biel3i584hg88" path="res://Scripts/Cururu/Melee.gd" id="55_7uoqt"]
[ext_resource type="Texture2D" uid="uid://db18wnpxgwosm" path="res://Sprites/Cururu/Melee/04.png" id="55_d7mdf"]
[ext_resource type="Script" uid="uid://twsepycefell" path="res://Scripts/Cururu/Magia.gd" id="56_7uoqt"]
[ext_resource type="Texture2D" uid="uid://cer7wfxkxaems" path="res://Sprites/Cururu/Melee/05.png" id="56_w1841"]
[ext_resource type="Texture2D" uid="uid://d14w2r75avcbe" path="res://Sprites/Cururu/Melee/06.png" id="57_ny8nr"]
[ext_resource type="Texture2D" uid="uid://1gd71hpyeid3" path="res://Sprites/Cururu/Melee/07.png" id="58_2t31h"]
[ext_resource type="Texture2D" uid="uid://ih4uq0k4wybx" path="res://Sprites/Cururu/Melee/08.png" id="59_s2eek"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t2cfw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0hf88")
}, {
"duration": 1.0,
"texture": ExtResource("3_7uoqt")
}, {
"duration": 1.0,
"texture": ExtResource("4_61o3p")
}, {
"duration": 1.0,
"texture": ExtResource("5_0r6tj")
}, {
"duration": 1.0,
"texture": ExtResource("6_wao3i")
}, {
"duration": 1.0,
"texture": ExtResource("7_bo6dy")
}, {
"duration": 1.0,
"texture": ExtResource("8_g8tdn")
}],
"loop": true,
"name": &"Dano",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_61o3p")
}],
"loop": true,
"name": &"Dash",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7uoqt")
}],
"loop": true,
"name": &"Fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_6q3px")
}, {
"duration": 1.0,
"texture": ExtResource("11_d2bxm")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_0hf88")
}, {
"duration": 1.0,
"texture": ExtResource("12_7uoqt")
}, {
"duration": 1.0,
"texture": ExtResource("13_61o3p")
}],
"loop": true,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_0r6tj")
}, {
"duration": 1.0,
"texture": ExtResource("15_wao3i")
}],
"loop": true,
"name": &"Land",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_d45jk")
}, {
"duration": 1.0,
"texture": ExtResource("18_vdd7f")
}, {
"duration": 1.0,
"texture": ExtResource("19_x4yiv")
}, {
"duration": 1.0,
"texture": ExtResource("20_6iqbf")
}, {
"duration": 1.0,
"texture": ExtResource("21_x3lr7")
}, {
"duration": 1.0,
"texture": ExtResource("22_wpp42")
}, {
"duration": 1.0,
"texture": ExtResource("23_kmqi2")
}, {
"duration": 1.0,
"texture": ExtResource("24_2q4c8")
}, {
"duration": 1.0,
"texture": ExtResource("25_wq158")
}, {
"duration": 1.0,
"texture": ExtResource("26_1mxu7")
}],
"loop": true,
"name": &"Magia",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_tms4o")
}, {
"duration": 1.0,
"texture": ExtResource("53_1dbdn")
}, {
"duration": 1.0,
"texture": ExtResource("54_0w8y8")
}, {
"duration": 1.0,
"texture": ExtResource("55_d7mdf")
}],
"loop": true,
"name": &"Melee1",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("56_w1841")
}, {
"duration": 1.0,
"texture": ExtResource("57_ny8nr")
}, {
"duration": 1.0,
"texture": ExtResource("58_2t31h")
}, {
"duration": 1.0,
"texture": ExtResource("59_s2eek")
}],
"loop": true,
"name": &"Melee2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_wq158")
}, {
"duration": 1.0,
"texture": ExtResource("44_1mxu7")
}, {
"duration": 1.0,
"texture": ExtResource("45_lwl7b")
}, {
"duration": 1.0,
"texture": ExtResource("46_e0rx1")
}, {
"duration": 1.0,
"texture": ExtResource("47_ga1ek")
}, {
"duration": 1.0,
"texture": ExtResource("48_jpq87")
}, {
"duration": 1.0,
"texture": ExtResource("49_eyqrd")
}, {
"duration": 1.0,
"texture": ExtResource("50_tms4o")
}, {
"duration": 1.0,
"texture": ExtResource("51_1dbdn")
}, {
"duration": 1.0,
"texture": ExtResource("52_32f06")
}],
"loop": true,
"name": &"Run",
"speed": 18.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qakxq"]
radius = 44.0
height = 162.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xx3r0"]
radius = 33.0
height = 90.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ga1ek"]
radius = 51.0
height = 112.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xx3r0"]
radius = 74.0068

[sub_resource type="CircleShape2D" id="CircleShape2D_ren7w"]
radius = 69.2604

[sub_resource type="Animation" id="Animation_aofpm"]
resource_name = "Dano"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dano"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitContainer/Melee1/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitContainer/Melee2/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_buhp1"]
resource_name = "Dash"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_rpndr"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e7e5s"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_8v2dh"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_7uoqt"]
resource_name = "Magia"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Magia"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/Magia")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.525),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"UsaMagia"
}]
}

[sub_resource type="Animation" id="Animation_7ba70"]
resource_name = "Melee1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Melee1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitContainer/Melee1/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.225),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/Melee")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Reset_Ataque"
}]
}

[sub_resource type="Animation" id="Animation_yd0lm"]
resource_name = "Melee2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Melee2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitContainer/Melee2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/Melee")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Reset_Ataque"
}]
}

[sub_resource type="Animation" id="Animation_g0l4m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitContainer/Melee1/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitContainer/Melee2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_prtj7"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cururu:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cururu:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0l4m"]
_data = {
&"Dano": SubResource("Animation_aofpm"),
&"Dash": SubResource("Animation_buhp1"),
&"Fall": SubResource("Animation_rpndr"),
&"Idle": SubResource("Animation_e7e5s"),
&"Jump": SubResource("Animation_8v2dh"),
&"Magia": SubResource("Animation_7uoqt"),
&"Melee1": SubResource("Animation_7ba70"),
&"Melee2": SubResource("Animation_yd0lm"),
&"RESET": SubResource("Animation_g0l4m"),
&"Run": SubResource("Animation_prtj7")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("vida", "state_machine", "hitbox_container", "hurtbox_container") groups=["Player"]]
collision_layer = 2
script = ExtResource("1_gwpdq")
vel = 7.0
vel_aerea = 5.0
altura_pulo = 3.0
tempo_pulo = 0.8
tempo_cair = 0.5
tempo_coyote = 0.1
lag_pulo = 0.1
tempo_dash = 0.2
distancia_dash = 4.0
cooldown_dash = 0.2
distancia_knockback = 2.0
tempo_knockback = 0.2
vida = NodePath("Vida")
state_machine = NodePath("StateMachine")
hitbox_container = NodePath("HitContainer")
hurtbox_container = NodePath("HurtContainer")

[node name="Cururu" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-16, -120)
scale = Vector2(0.375651, 0.375651)
sprite_frames = SubResource("SpriteFrames_t2cfw")
animation = &"Idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17, -81)
shape = SubResource("CapsuleShape2D_qakxq")

[node name="Vida" type="Node" parent="."]
script = ExtResource("45_vkjtj")
vida_max = 5
metadata/_custom_type_script = "uid://hsdutxxttrp3"

[node name="HurtContainer" type="Node2D" parent="."]
position = Vector2(154, -3)

[node name="HurtBox" parent="HurtContainer" node_paths=PackedStringArray("comp_vida", "parent") instance=ExtResource("46_wjcvp")]
position = Vector2(133, 0)
comp_vida = NodePath("../../Vida")
parent = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtContainer/HurtBox"]
position = Vector2(-304, -130)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_xx3r0")
debug_color = Color(0.92912, 0, 0.16329, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtContainer/HurtBox"]
position = Vector2(-304, -55)
shape = SubResource("CapsuleShape2D_ga1ek")
debug_color = Color(0.92912, 0, 0.16329, 0.42)

[node name="HitContainer" type="Node2D" parent="."]
position = Vector2(-2, 0)

[node name="Melee1" parent="HitContainer" node_paths=PackedStringArray("ignore") instance=ExtResource("47_grb16")]
position = Vector2(3, -3)
ignore = NodePath("../../HurtContainer/HurtBox")
sfx = ExtResource("48_c8qv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitContainer/Melee1"]
position = Vector2(45, -94)
shape = SubResource("CircleShape2D_xx3r0")
disabled = true
debug_color = Color(0.69455, 0.495447, 0, 0.42)

[node name="Melee2" parent="HitContainer" node_paths=PackedStringArray("ignore") instance=ExtResource("47_grb16")]
ignore = NodePath("../../HurtContainer/HurtBox")
sfx = ExtResource("48_c8qv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitContainer/Melee2"]
position = Vector2(48, -75)
shape = SubResource("CircleShape2D_ren7w")
disabled = true

[node name="PosTiroMagia" type="Marker2D" parent="HitContainer"]
unique_name_in_owner = true
position = Vector2(135, -92)

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_g0l4m")
}
autoplay = "Idle"

[node name="Timers" type="Node" parent="."]

[node name="Coyote" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="JumpLag" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="MeleeTime" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="DashTime" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
unique_name_in_owner = true
script = ExtResource("49_1ribx")
start_state = NodePath("Fall")

[node name="Chao" type="Node" parent="StateMachine" node_paths=PackedStringArray("pulo_state", "fall_state", "dash_state", "dano_state", "melee_state", "magia_state")]
script = ExtResource("50_3s0sn")
pulo_state = NodePath("../Pulo")
fall_state = NodePath("../Fall")
dash_state = NodePath("../Dash")
dano_state = NodePath("../Dano")
melee_state = NodePath("../Melee")
magia_state = NodePath("../Magia")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("chao_state", "pulo_state", "dash_state", "melee_state", "dano_state", "magia_state")]
script = ExtResource("51_dvy3r")
chao_state = NodePath("../Chao")
pulo_state = NodePath("../Pulo")
dash_state = NodePath("../Dash")
melee_state = NodePath("../Melee")
dano_state = NodePath("../Dano")
magia_state = NodePath("../Magia")

[node name="Pulo" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "dash_state", "melee_state", "dano_state", "magia_state")]
script = ExtResource("52_damx7")
fall_state = NodePath("../Fall")
dash_state = NodePath("../Dash")
melee_state = NodePath("../Melee")
dano_state = NodePath("../Dano")
magia_state = NodePath("../Magia")

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("chao_state", "fall_state", "dano_state")]
script = ExtResource("53_k0fov")
chao_state = NodePath("../Chao")
fall_state = NodePath("../Fall")
dano_state = NodePath("../Dano")

[node name="Dano" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "chao_state")]
script = ExtResource("54_jgcph")
fall_state = NodePath("../Fall")
chao_state = NodePath("../Chao")

[node name="Melee" type="Node" parent="StateMachine" node_paths=PackedStringArray("chao_state", "fall_state", "dano_state")]
script = ExtResource("55_7uoqt")
chao_state = NodePath("../Chao")
fall_state = NodePath("../Fall")
dano_state = NodePath("../Dano")

[node name="Magia" type="Node" parent="StateMachine" node_paths=PackedStringArray("chao_state", "fall_state", "dano_state")]
script = ExtResource("56_7uoqt")
chao_state = NodePath("../Chao")
fall_state = NodePath("../Fall")
dano_state = NodePath("../Dano")

[connection signal="animation_finished" from="Anim" to="StateMachine/Dano" method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="Anim" to="StateMachine/Magia" method="_on_anim_animation_finished"]
[connection signal="timeout" from="Timers/Coyote" to="StateMachine/Fall" method="_on_coyote_timeout"]
[connection signal="timeout" from="Timers/JumpLag" to="StateMachine/Fall" method="_on_jump_lag_timeout"]
[connection signal="timeout" from="Timers/MeleeTime" to="StateMachine/Melee" method="_on_melee_timeout"]
[connection signal="timeout" from="Timers/DashTime" to="StateMachine/Dash" method="_on_dash_time_timeout"]
[connection signal="timeout" from="Timers/DashCooldown" to="." method="_on_dash_cooldown_timeout"]
